refs #46857: Fixing external icon being out of position on Tablet.

--- a/web/themes/custom/gt_honors/patterns/organisms/alert/scss/styles.scss
+++ b/web/themes/custom/gt_honors/patterns/organisms/alert/scss/styles.scss
@@ -24,11 +24,12 @@
     a,
     button {
       @include gtl-button--secondary;
+      display: flex;
+      gap: 1.75rem;
     }
 
     svg.ext {
-      margin-left: 25px;
-      transform: scale(2.5) translateY(-3px);
+      transform: scale(2.5);
       fill: $color-neutral000;
       transition: fill $transition;
       @include instant-transition-on-touch-devices;
